# Aegis-low-latency-matching-engine

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: load_test.cpp
docs/: architecture.md
profiling/: perf_commands.md
results/: benchmark_results.md
src/: main.cpp
src/core/: matching_engine.cpp  matching_engine.hpp  order.hpp  order_book.cpp  order_book.hpp  trade.hpp
src/infra/: cpu_affinity.hpp  lock_free_queue.hpp  thread_safe_queue.hpp
src/metrics/: metrics.hpp
src/sharding/: sharding_engine.hpp
